<resources>
    <string name="app_name">Sportable</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- MainActivity Part -->
    <string name="statistics_button_text">Статистика</string>
    <string name="settings_button_text">Настройки</string>
    <string name="freerun_button_text">Свободная тренировка</string>
    <string name="map_button_text">Своя цель</string>
    <!-- StatActivity Part -->
    <string name="title_activity_stat">StatActivity</string>
    <string name="tab_total">Общее</string>
    <string name="tab_certain_activity">По тренировкам</string>
    <string name="tab_certain_day">По дням</string>
    <string name="tab_walking">Ходьба</string>
    <string name="tab_running">Бег</string>
    <string name="tab_bicycle">Велосипед</string>
    <string name="tab_skiing">Лыжи</string>
    <string name="text_title_calories">Калории</string>
    <!--<string name="text_total_calories">Всего сожено калорий</string>
    <string name="text_average_calories">В среднем за одну тренировку сжигалось</string>
    <string name="text_biggest_calories">Максимально сожено за одну тренировку</string>
    <string name="text_smallest_calories">Минимально сожено за одну тренировку</string>-->
    <string name="text_title_distance">О дистанции</string>
   <!-- <string name="text_total_distance">Общая дистанция</string>
    <string name="text_average_distance">Средняя дистанция за одну тренировку</string>
    <string name="text_biggest_distance">Максимальная дистанция</string>
    <string name="text_smallest_distance">Минимальная дистанция</string>-->
    <string name="text_title_time">О времени</string>
    <!--<string name="text_total_time">Всего вы прозанимались</string>
    <string name="text_average_time">В среднем одна тренировка длилась</string>
    <string name="text_biggest_time">Самая долгая тренировка</string>
    <string name="text_smallest_time">Самая короткая тренировка</string>-->
    <string name="text_average_speed">Средняя скорость</string>
    <string name="text_biggest_speed">Максимальная скорость</string>
    <string name="text_smallest_speed">Минимальная скорость</string>
    <string name="text_favourite_workout">Любимый вид тренировки</string>
    <string name="text_kind_of_workout">Вид тренировки</string>
    <string name="text_time_of_workout">Время тренировки</string>
    <string name="text_distance">Дистанция тренировки</string>
    <string name="text_no_workout">Вы не провели ещё ни одной тренировки</string>

    <!--SettingsActivity Part-->
    <string name="menuName">ВВЕДИТЕ ДАННЫЕ ПРОФИЛЯ</string>
    <string name="changeProfile">Изменить профиль</string>
    <string name="clearStatistics">Очистить статистику</string>
    <string name="saveAndQuit">Выйти</string>
    <!--ChangeProfile Part-->
    <string name="name">Имя:</string>
    <string name="weight">Вес [кг]:</string>
    <string name="height">Рост [см]:</string>
    <string name="year">Год рождения:</string>
    <string name="newName">Введите новое имя</string>
    <string name="newHeight">Введите новый рост</string>
    <string name="newWeight">Введите новый вес</string>
    <string name="newYear">Введите новый год рождения</string>
    <string name="end">Сохранить и выйти</string>
    <!--FirstEntry Part-->
    <string name="proceed">Сохранить и продолжить</string>
    <string name="first_entry">First Entry</string>
    <string name="fName">Введите имя</string>
    <string name="fHeight">Введите рост</string>
    <string name="fWeight">Введите вес</string>
    <string name="fYear">Введите год рождения</string>
    <!--MainActivity Part-->
    <string name="walk">Ходьба</string>
    <string name="run">Бег</string>
    <string name="bicycle">Велосипед</string>
    <string name="ski">Лыжи</string>
    <string name="geoOff">Включите геолокацию, чтобы приложение работало корректно</string>
    <string name="settings">Настройки</string>
    <string name="minimum">Минимум</string>
    <string name="maximum">Максимум</string>
    <string name="averaged">В среднем</string>
    <string name="total">Всего</string>
    <string name="favourite">Любимая тренировка</string>
</resources>