<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.settings.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settings_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_left_arrow" />

            <TextView
                style="@style/Bigger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/appbar_padding"
                android:text="@string/settings" />
        </LinearLayout>

        <Button
            style="@style/Text"
            android:id="@+id/changeProfile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle_without_colour"
            android:onClick="changeProfile"
            android:text="@string/changeProfile" />

        <Button
            style="@style/Text"
            android:id="@+id/clearStat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_rectangle_without_colour"
            android:onClick="clearStatistics"
            android:text="@string/clearStatistics" />
    </LinearLayout>


</ScrollView>